    added signature test
    added META_MERGE bugtracker, repository to Makefile.PL
    cleanup Makefile.PL a bit
    fixed uninitialized warning in _unpack_ticket() [51138]
    fixed Odd number of elements warning in _unpack_ticket() [51136]
    POD: explain difference between "TicketExpires" and inherited AuthCookie
        "Expire" directive.
    MP1: synchronize with MP2 version.
    Abstract common MP1/MP2 code into ::Base package.
    Move ::Util code into ::Base
    use Class::Accessor::Fast to generate accessors
    combine user/pass lookup into single SQL query (one less query per request)
    added get_config() for fetching config values
    added user_table(), ticket_table(), secret_table() methods to simplify
        table lookups
    eliminate need for _get_max_secret_version() - consolidated into
        fetch_secret()
    changed make_ticket() no longer takes $r parameter - use object attr
        instead

Release 0.90
    changed LICENSE information in README removed "same terms as perl" and be
        more explicit.
    moved password check routines out into Util::compare_password()
    removed last of the hard coded SQL in Apache2::AuthTicket
    removed cruft in Apache2::AuthTicket left over from MP1 migration
    changed $this => $self
    added tests for tampered cookie, CheckIP=0, CheckBrowser=1
    changed config parsing so that boolean values can be specified as any of:
        TRUE : 1, yes, on, true
        FALSE: 0, no, off, false
    added Apache::AuthTicket::Util and moved some internal into it
    added configuration parameter TicketCheckBrowser which enables checking of
        the client User-Agent string.
    added configuration parameter TicketCheckIP so client ip address checks can
        be disabled.
    added test cases to check that cookie fields secure, path, and domain work
    moved source management to github.com:
        http://github.com/mschout/apache-authticket/
    updated documentation for MP2